--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,10 @@
         xmlns:tools="http://schemas.android.com/tools"
 >
     <data>
+        <import type="mx.fidisohl.tweetmood.models.ENetworkStatus"/>
         <import type="mx.fidisohl.tweetmood.utils.StringUtils"/>
+        <import type="mx.fidisohl.tweetmood.utils.ViewUtils"/>
+        <import type="android.view.View"/>
         <variable name="vm" type="mx.fidisohl.tweetmood.ui.main.MainViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,6 +16,7 @@
             tools:context=".MainActivity">
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent" android:layout_height="match_parent"
+                android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.GONE : View.VISIBLE }"
         >
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/layoutTop"
@@ -20,6 +24,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
+                    android:paddingBottom="40dp"
                     app:layout_constraintTop_toTopOf="parent"
             >
                 <com.google.android.material.textfield.TextInputLayout
@@ -49,25 +54,25 @@
                         android:layout_marginTop="30dp"
                         android:text="@string/search_tweets"
                         android:enabled="@{StringUtils.isNotNullOrEmpty(vm.username)}"
+                        android:onClick="@{vm::btnMainClick}"
                         app:layout_constraintTop_toBottomOf="@+id/layoutUsername"
                 />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/layoutTop"
                     app:layout_constraintBottom_toBottomOf="parent"
             >
                 <TextView
-                        android:id="@+id/tvMsg1"
-                        android:layout_width="wrap_content" android:layout_height="wrap_content"
-                        android:text="@string/most_recent_tweets_by_username"
-                        android:layout_marginTop="40dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginStart="10dp"
+                        android:id="@+id/tvUserNameTweets"
+                        android:layout_width="match_parent" android:layout_height="wrap_content"
+                        tools:text="@string/username_tweets_placeholder"
+                        android:layout_marginStart="26dp"
+                        android:layout_marginEnd="26dp"
+                        android:visibility="@{vm.tweetsListEmpty() ? View.GONE : View.VISIBLE}"
                         android:textColor="@color/colorDarkGray"
                         app:layout_constraintTop_toTopOf="parent"
                 />
@@ -77,7 +82,9 @@
                         android:layout_width="match_parent" android:layout_height="1dp"
                         android:src="@drawable/separator"
                         android:layout_marginTop="20dp"
-                        app:layout_constraintTop_toBottomOf="@+id/tvMsg1"/>
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tvUserNameTweets"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvUserTweets"
@@ -85,6 +92,7 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="20dp"
                         tools:listitem="@layout/item_tweet"
+                        android:visibility="@{vm.tweetsListEmpty() ? View.GONE : View.VISIBLE}"
                         app:layout_constraintTop_toBottomOf="@+id/layoutSeparator"
                         app:layout_constraintBottom_toBottomOf="parent"
                 />
@@ -93,11 +101,11 @@
                         android:id="@+id/layoutMessages"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="@+id/rvUserTweets"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginTop="80dp"
+                        app:layout_constraintTop_toBottomOf="@+id/layoutSeparator"
                         android:padding="8dp"
-                        android:visibility="gone"
-                        tools:visibility="gone">
+                        android:visibility="@{vm.tweetsListEmpty() ? View.VISIBLE : View.GONE}"
+                        tools:visibility="visible">
 
                     <ImageView
                             android:id="@+id/imgInfo"
@@ -117,7 +125,7 @@
                             android:layout_marginEnd="30dp"
                             android:text="@string/msg_introduce_username"
                             android:textAlignment="center"
-                            android:textSize="20sp"
+                            android:textSize="18sp"
                             app:layout_constraintTop_toBottomOf="@+id/imgInfo"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -128,6 +136,9 @@
         <include
                 android:id="@+id/layoutLoader"
                 layout="@layout/layout_loader"
-                android:visibility="gone"/>
+                android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.VISIBLE : View.GONE}"
+                tools:visibility="gone"
+        />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
