Added Splash, Launcher, change color palette.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                 >
                     <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/etUsername"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             style="@style/mainEditTextStyle"
