--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -35,7 +35,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-            />
+                    android:contentDescription="@string/username_photo_profile"/>
 
             <TextView
                     android:id="@+id/username"
@@ -95,6 +95,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="60sp"
                         android:text="@{ViewUtils.getEmojiFromResult(result)}"
+                        android:textColor="#fff"
                         android:textAlignment="center"
                         android:layout_marginTop="16dp"
                         app:layout_constraintTop_toTopOf="parent"
@@ -113,14 +114,6 @@
                         android:text="@{ViewUtils.getTextFromResult(result)}"
                         tools:text="HAPPY"
                 />
-
-
-
-                <!--<include-->
-                        <!--android:id="@+id/layoutLoader"-->
-                        <!--layout="@layout/layout_loader"-->
-                        <!--android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.VISIBLE : View.GONE}"-->
-                <!--/>-->
 
                 <ProgressBar
                         android:id="@+id/layoutProgressBar"
