--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,10 @@
     <style name="AppTheme.LinearProgress">
         <item name="colorAccent">@color/colorPrimaryDark</item>
     </style>
+
+    <style name="AppThemeWhite.SplashActivity" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    </style>
 </resources>
