--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -25,79 +25,103 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:background="@color/colorPrimary10"
         >
-            <ImageView
-                    android:id="@+id/imgProfile"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginStart="5dp"
-                    android:gravity="center"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/username_photo_profile"/>
-
-            <TextView
-                    android:id="@+id/username"
-                    android:layout_width="wrap_content" android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    tools:text="Gerardo Epitacio"
-                    android:text="@{tweet.user.name}"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/roboto"
-                    android:textStyle="bold"
-                    app:layout_constraintTop_toBottomOf="@+id/imgProfile"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-
-            />
-            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                      android:id="@+id/screenUsername"
-                      tools:text="\@gerardoepitacio"
-                      android:fontFamily="@font/roboto"
-                      android:textSize="14sp"
-                      android:text="@{`@`+tweet.user.screen_name}"
-                      app:layout_constraintEnd_toEndOf="parent"
-                      app:layout_constraintStart_toStartOf="parent"
-                      app:layout_constraintTop_toBottomOf="@+id/username"
-            />
-
-            <TextView
-                    android:id="@+id/tvTweetContent"
-                    android:layout_width="match_parent" android:layout_height="wrap_content"
-                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur diam metus, at aliquam velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur diam metus, at aliquam velit."
-                    android:text="@{tweet.text}"
-                    android:transitionName="tweetContent"
-                    android:fontFamily="@font/roboto"
-                    android:textStyle="italic"
-                    android:textSize="20sp"
-                    android:elevation="5dp"
-                    android:padding="16dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/layoutTweet"
                     android:background="@android:color/white"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/screenUsername"
-                    app:layout_constraintStart_toEndOf="@+id/imgProfile"
-                    app:layout_constraintEnd_toEndOf="parent"
-            />
+                    android:elevation="5dp"
+                    android:paddingBottom="@dimen/ars_default_margin"
+                    app:layout_constraintTop_toTopOf="parent"
+            >
+
+                <ImageView
+                        android:id="@+id/imgProfile"
+                        android:layout_width="@dimen/ars_profile_width"
+                        android:layout_height="@dimen/ars_profile_width"
+                        android:layout_marginTop="@dimen/ars_profile_image_margin_top"
+                        android:layout_marginStart="5dp"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_person"
+                        android:background="@drawable/rounded_background"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:contentDescription="@string/username_photo_profile"/>
+
+                <TextView
+                        android:id="@+id/username"
+                        android:layout_width="wrap_content" android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        tools:text="Gerardo Epitacio"
+                        android:text="@{tweet.user.name}"
+                        android:textSize="@dimen/ars_username_text_size"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="bold"
+                        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+
+                />
+                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                          android:id="@+id/screenUsername"
+                          tools:text="\@gerardoepitacio"
+                          android:fontFamily="@font/roboto"
+                          android:textSize="@dimen/ars_screen_username_text_size"
+                          android:text="@{`@`+tweet.user.screen_name}"
+                          app:layout_constraintEnd_toEndOf="parent"
+                          app:layout_constraintStart_toStartOf="parent"
+                          app:layout_constraintTop_toBottomOf="@+id/username"
+                />
+
+                <ImageView
+                        android:id="@+id/layoutSeparator1"
+                        android:layout_width="match_parent" android:layout_height="1dp"
+                        android:src="@drawable/separator"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginTop="@dimen/ars_default_margin"
+                        app:layout_constraintTop_toBottomOf="@+id/screenUsername"
+                />
+
+                <TextView
+                        android:id="@+id/tvTweetContent"
+                        android:layout_width="match_parent" android:layout_height="wrap_content"
+                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur diam metus, at aliquam velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur diam metus, at aliquam velit."
+                        android:text="@{tweet.text}"
+                        android:transitionName="tweetContent"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="italic"
+                        android:textSize="@dimen/ars_tweet_content_text_size"
+                        android:layout_marginStart="@dimen/ars_default_margin"
+                        android:layout_marginEnd="@dimen/ars_default_margin"
+                        android:padding="@dimen/ars_default_margin"
+                        app:layout_constraintTop_toBottomOf="@+id/layoutSeparator1"
+                        app:layout_constraintStart_toEndOf="@+id/imgProfile"
+                        app:layout_constraintEnd_toEndOf="parent"
+                />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/tvTweetContent"
-                    android:padding="28dp"
+                    android:layout_marginTop="@dimen/ars_default_margin"
+                    app:layout_constraintTop_toBottomOf="@+id/layoutTweet"
+                    android:padding="@dimen/ars_analysis_result_padding"
                     android:background="@{ViewUtils.getColorFromResult(result)}"
             >
 
-                <TextView
+                <androidx.emoji.widget.EmojiAppCompatTextView
                         android:id="@+id/tvEmoji"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="60sp"
+                        android:textSize="@dimen/ars_emoji_size"
                         android:text="@{ViewUtils.getEmojiFromResult(result)}"
                         android:textColor="#fff"
                         android:textAlignment="center"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/ars_default_margin"
                         app:layout_constraintTop_toTopOf="parent"
                 />
 
@@ -107,10 +131,10 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@+id/tvEmoji"
                         android:textAlignment="center"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/ars_default_margin"
                         android:fontFamily="@font/roboto"
                         android:textStyle="bold"
-                        android:textSize="24sp"
+                        android:textSize="@dimen/ars_analysis_result_text_size"
                         android:text="@{ViewUtils.getTextFromResult(result)}"
                         tools:text="HAPPY"
                 />
@@ -123,7 +147,7 @@
                         android:indeterminate="true"
                         android:theme="@style/AppTheme.LinearProgress"
                         android:maxWidth="50dp"
-                        android:layout_marginTop="60dp"
+                        android:layout_marginTop="@dimen/ars_loader_margin_top"
                         app:layout_constraintTop_toTopOf="parent"
                         android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.VISIBLE : View.GONE}"
                 />
@@ -138,7 +162,7 @@
                         android:layout_marginEnd="10dp"
                         android:layout_marginStart="10dp"
                         android:textAlignment="center"
-                        android:text="@string/msg_searching_tweets"
+                        android:text="@string/analysing_tweet_mood"
                         app:layout_constraintTop_toBottomOf="@+id/layoutProgressBar"
                         android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.VISIBLE : View.GONE}"
                 />
@@ -151,7 +175,9 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_margin="30dp"
+                    android:padding="12dp"
+                    android:textStyle="bold"
+                    android:layout_margin="@dimen/ars_button_main"
                     android:textAllCaps="true"
                     android:text="@string/accept"
             />
