--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -14,6 +14,8 @@
             android:layout_marginTop="5dp"
             android:layout_marginStart="5dp"
             android:gravity="center"
+            android:src="@drawable/ic_person"
+            android:background="@drawable/rounded_background"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
     />
